# onnxsplit

./: .coverage  .gitignore  README.md  main.py  pyproject.toml
docs/: design.md  optimization-summary.md
docs/plans/: 2025-01-24-graph-transform.md  2025-01-24-model-analyzer.md  2025-01-24-setup-and-config.md  2025-01-24-split-planner.md  2025-01-25-algorithm-optimization.md  2025-01-26-auto-find-parts.md  2025-01-27-memory-cli.md  2025-01-27-refactor-tech-debt.md
docs/superpowers/plans/: 2026-03-20-cli-config-and-rule-activation.md
scripts/: generate_quantized_model.py
src/onnxsplit/: __init__.py  __main__.py
src/onnxsplit/analyzer/: __init__.py  dependency.py  (+3 more)
tests/: test_adjacent_split_optimization.py  test_analyzer_dependency.py  test_analyzer_model.py  test_analyzer_operator.py  test_analyzer_tensor.py  test_auto_adjust.py  test_axis_rules.py  test_cascading_split_optimization.py  test_cli_e2e.py  test_cli_parser.py  test_cli_runner.py  test_clip_constant_zero_dim_bug.py  test_config_coverage.py  test_config_loader.py  test_config_merger.py  test_config_schema.py  test_dangling_different_parts.py  test_div_pow_constant_bug.py  test_main.py  test_memory_adjust_bug.py  test_memory_adjust_invalid_parts.py  test_memory_estimator.py  test_mul_weight_batch_mismatch_bug.py  test_node_clone.py  test_output_name_conflict.py  test_reconnect.py  test_reshape_batch_split_bug.py  test_reshape_batch_split_bug2.py  test_runtime_equivalence.py  test_special_char_names.py  test_split_concat.py  test_splitter_plan.py  test_splitter_planner.py  test_ssa_duplicate_split_fix.py  test_transform_executor.py  test_verify_edge_cases.py  test_vgg19_integration.py
tests/benchmarks/: test_performance.py
tests/integration/: test_shared_utilities.py
tests/property/: __init__.py  test_optimization_equivalence.py
tests/utils/: test_constants.py  test_naming.py
(+33 files in other folders)
