[project]
name = "onnxsplit"
version = "0.1.0"
description = "ONNX model operator splitting tool for memory optimization"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "onnx>=1.20.1",
    "onnxruntime>=1.23.2",
    "onnxsim>=0.4.34",
    "pyyaml>=6.0.3",
    "typer>=0.21.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-benchmark>=4.0.0",
    "pyyaml>=6.0.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "numpy>=2.0.0",
    "onnxruntime>=1.20.0",
]

[project.scripts]
onnxsplit = "onnxsplit.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_functions = "test_* benchmark_*"

[dependency-groups]
dev = [
    "hypothesis>=6.151.9",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
]
